...
    } else {
        ListenBrainzTokenValidationStatus.IDLE
    }
    val isCheckingToken = tokenValidationStatus == ListenBrainzTokenValidationStatus.CHECKING
    val resources = LocalResources.current
    LazyColumn(
        modifier = Modifier.fillMaxSize().testTag("settings-list"),
        contentPadding = PaddingValues(20.dp, 24.dp, 20.dp, bottomContentPadding),
        verticalArrangement = Arrangement.spacedBy(14.dp),
    ) {
        item(key = "header", contentType = "header") {
            SettingsHeader(stringResource(state.destination.settingsTitleRes), state.destination.settingsParent != null) {
                state.destination.settingsParent?.let(onNavigate)
...
